--- a/Model_part_2/experiments_config.yml
+++ b/Model_part_2/experiments_config.yml
@@ -12,6 +12,6 @@ models:
       bootstrap: [true]
       max_samples: [0.75, 0.8, 0.85]
       class_weight: ["balanced", "balanced_subsample", {0: 1, 1: 3}]
-      criterion: ["gini", "entropy"]
-      random_state: [42]
-      n_jobs: [-1]
+      criterion: ["gini", "entropy", "gini"]
+      random_state: [42,42,42]
+      n_jobs: [-1,-1,-1]
